--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deepstream.io": "^1.1.1",
     "deepstream.io-client-js": "^1.1.1",
     "deepstream.io-tools-react": "^0.1.5",
+    "moment": "^2.15.1",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.2",
