--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "moment": "^2.15.1",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-maskedinput": "^3.2.4"
   },
   "scripts": {
     "server": "node server/init.js",
